fix input jumping

--- a/src/common/styles/FormStyles.module.sass
+++ b/src/common/styles/FormStyles.module.sass
@@ -28,7 +28,7 @@
   justify-content: space-between
   min-width: inherit
   max-width: inherit
-  width: inherit
+  width: 500px
   gap: 24px
 
 .label
@@ -45,9 +45,9 @@
   padding: 10px
   border: 1px solid #000
   border-radius: 12px
-  min-width: 100px
-  max-width: 600px
   width: 100%
+  min-width: 100px
+  max-width: 500px
   &::placeholder
     font-size: 14px
     font-weight: 500
