--- a/src/components/PasswordInput/PasswordInput.module.sass
+++ b/src/components/PasswordInput/PasswordInput.module.sass
@@ -1,7 +1,7 @@
 .shownBtn
   position: absolute
   top: 55%
-  right: 10px
+  right: 2%
   transform: translateY(-50%)
   border: none
   background: none
@@ -10,7 +10,9 @@
   color: #000
 
 .passwordInputWrapper
-  width: 100%
+  min-width: inherit
+  max-width: inherit
+  width: 500px
   position: relative
 
 
